--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "app",
+  "name": "leaflet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "tsc --noemit && next lint",
+    "test": "./node_modules/.bin/cypress open --project source/tests",
+    "ci": "yarn && yarn build && yarn start"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,7 +18,14 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@directus/sdk": "^10.2.0",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.2.0",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.3",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
