--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@directus/sdk": "^10.2.0",
+    "@directus/sdk": "^10.3.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.8",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.2.2",
     "cypress": "^12.2.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "postcss": "^8.4.19",
+    "react-color": "^2.19.3",
+    "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.4"
   }
 }
