--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,8 @@
 
-# --------------- Docker deploy modifier, adjust to deploy for production.
-# Options         | "dev" or "prod", production deploys the app.
+# --------------- Docker deploy modifier, adjust to enable certain services.
+# "next"          | App
+# "dev"           | Endpoint + Database
+# "prod"          | App + Endpoint + Database
 COMPOSE_PROFILES= "dev"
 
 # ------------ Service ports exposed by docker, ensure to prevent conflicts.
