--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,19 @@ on:
     branches: main
 
 jobs:
+  Build:
+    runs-on: self-hosted
+    steps:
+      - uses: appleboy/ssh-action@master
+        with:
+          key: ${{ secrets.DEPLOY_KEY }}
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          script: |
+            cd ~/env/${{ github.event.repository.name }}
+            git pull
+            docker-compose build --no-cache
   Deploy:
     runs-on: self-hosted
     steps:
@@ -16,5 +29,6 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           port: ${{ secrets.DEPLOY_PORT }}
           script: |
-            cd ~/env/${{ github.event.repository.name }} ; git pull
-            docker-compose down ; docker-compose up -d --build
+            cd ~/env/${{ github.event.repository.name }}
+            docker-compose down ; docker-compose up -d
+
