--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,6 @@
 
-# --------------- Docker deploy modifier, adjust to enable certain services.
-# "next"          | App
-# "dev"           | Endpoint + Database
-# "prod"          | App + Endpoint + Database
+# --------------- Docker deploy modifier, adjust to deploy for production.
+# Options         | "dev" or "prod", production deploys the app.
 COMPOSE_PROFILES= "dev"
 
 # ------------ Service ports exposed by docker, ensure to prevent conflicts.
