--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
           port: ${{ secrets.DEPLOY_PORT }}
           script: |
             cd ~/env/${{ github.event.repository.name }}
-            git pull
-            docker-compose build --no-cache
+            git pull ; docker-compose build --no-cache
   Deploy:
     runs-on: self-hosted
     steps:
