--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,6 @@ on:
     branches: main
 
 jobs:
-  Build:
-    runs-on: self-hosted
-    steps:
-      - uses: appleboy/ssh-action@master
-        with:
-          key: ${{ secrets.DEPLOY_KEY }}
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          port: ${{ secrets.DEPLOY_PORT }}
-          script: |
-            cd ~/env/${{ github.event.repository.name }}
-            git pull ; docker-compose build --no-cache
   Deploy:
     runs-on: self-hosted
     steps:
@@ -29,5 +17,5 @@ jobs:
           port: ${{ secrets.DEPLOY_PORT }}
           script: |
             cd ~/env/${{ github.event.repository.name }}
-            docker-compose down ; docker-compose up -d
+            git pull ; docker-compose down ; docker-compose up -d
 
