--- a/.github/workflows/pulls.yml
+++ b/.github/workflows/pulls.yml
@@ -18,11 +18,7 @@ jobs:
           node-version: '18.x'
 
       - name: Install dependencies
-        run: |
-          npm i -g yarn
-          yarn install --frozen-lockfile
+        run: npm i
 
       - name: Code Linter
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
+        run: npm run lint
