--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "files.exclude": {
         "tsconfig.tsbuildinfo": true,
-        "docker-compose.yml": true,
         "postcss.config.js": true,
+        "docker-compose.yml": true,
         ".eslintrc.json": true,
         "next.config.js": true,
         "tsconfig.json": true,
@@ -10,6 +10,7 @@
         "node_modules": true,
         "yarn.lock": true,
         "**/.keep": true,
+        ".github": true,
         ".next": true,
         "data": true
     }
