--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "tsc --noemit && next lint",
-    "test": "./node_modules/.bin/cypress open --project source/tests",
-    "ci": "apk add git && yarn && yarn build && yarn start"
+    "ci": "yarn && yarn build && yarn start",
+    "test": "./node_modules/.bin/cypress open --project source/tests"
   },
   "dependencies": {
     "next": "13.0.3",
@@ -17,18 +17,16 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@directus/sdk": "^10.3.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
-    "@types/react-color": "^3.0.6",
+    "@directus/sdk": "^10.3.1",
     "@types/react-dom": "18.0.8",
-    "autoprefixer": "^10.4.13",
-    "axios": "^1.2.2",
-    "cypress": "^12.2.0",
-    "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "autoprefixer": "^10.4.13",
+    "tailwindcss": "^3.2.4",
+    "react-icons": "^4.6.0",
+    "cypress": "^12.2.0",
     "postcss": "^8.4.19",
-    "react-icons": "^4.7.1",
-    "tailwindcss": "^3.2.4"
+    "eslint": "8.27.0"
   }
 }
