--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@directus/sdk": "^10.3.1",
+    "@headlessui/react": "^1.7.14",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
-    "@directus/sdk": "^10.3.1",
     "@types/react-dom": "18.0.8",
-    "eslint-config-next": "13.0.3",
     "autoprefixer": "^10.4.13",
-    "tailwindcss": "^3.2.4",
-    "react-icons": "^4.6.0",
     "cypress": "^12.2.0",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.3",
     "postcss": "^8.4.19",
-    "eslint": "8.27.0"
+    "react-icons": "^4.6.0",
+    "tailwindcss": "^3.2.4"
   }
 }
