--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,27 @@
-name: deploy
+name: Deploy
 
-# ----- Rename "leaflet" to a valid branch -----
 on:
   push:
-    branches: main
+    branches: leaflet # <- Rename to a valid branch.
 
 jobs:
   deploy:
     runs-on: self-hosted
     steps:
-      # ----- Ensure all environment vars are configured -----
-      #          DEPLOY_ (KEY, HOST, USER, PORT, ENV)
       - uses: appleboy/ssh-action@master
         with:
-          key:      ${{ secrets.DEPLOY_KEY }} 
-          host:     ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          port:     ${{ secrets.DEPLOY_PORT }}
+          key:      ${{ secrets.SSH_KEY }} 
+          host:     ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port:     ${{ secrets.SSH_PORT }}
           script: |
-            mkdir /root /root/env /root/env/${{ github.event.repository.name }}
-            cd ~/env/${{ github.event.repository.name }}
+            mkdir ~/env ~/env/${{github.event.repository.name}}
+            cd ~/env/${{github.event.repository.name}}
 
-            git clone https://github.com/${{github.repository}} .
-            git pull
+            sudo git clone https://github.com/${{github.repository}} .
+            sudo git pull
 
-            echo '${{ secrets.DEPLOY_ENV }}' > .env
+            echo '${{ secrets.APP_ENV }}' > .env
             
-            docker-compose down ; docker-compose up -d
+            sudo docker-compose down
+            sudo docker-compose up -d
