--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,19 @@
 {
     "files.exclude": {
-        "tsconfig.tsbuildinfo": true,
         "postcss.config.js": true,
-        "docker-compose.yml": true,
+        "app/*/Session.tsx": true,
         ".eslintrc.json": true,
-        "next.config.js": true,
-        "tsconfig.json": true,
         "next-env.d.ts": true,
+        "**/*...rest*": true,
+        ".react-email": true,
         "node_modules": true,
-        "yarn.lock": true,
-        "**/.keep": true,
-        ".github": true,
+        "debug.log": true,
+        "yarn*": true,
         ".next": true,
-        "data": true
-    }
+        "data": true,
+    },
+    "i18n-ally.localesPaths": [
+        "src/locales"
+    ],
+    "i18n-ally.keystyle": "nested"
 }
