--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,23 @@
 version: "3"
 services:
 
-  # v -- NextJS | Frontend, react based compiled webapp.
+  # ┏━ NextJS | A framework for the web.
   app:
-    ports: [$APP_PORT:3000]
-
-    image: node:lts-alpine
+    image: node:18-alpine
     restart: unless-stopped
+    command: ["yarn", "deploy"]
+    ports: [$APP_PORT:3000]
+    depends_on: [database]
     working_dir: /usr/app
-    env_file: .env
     volumes: [.:/usr/app]
-    command: ["yarn", "ci"]
     profiles: ["prod"]
+    env_file: .env
 
-#   # v -- Directus | Backend CMS solution, accessible via API.
-#   endpoint:
-#     ports: [$ENDPOINT_PORT:8055]
-
-#     image: directus/directus:latest
-#     restart: unless-stopped
-#     networks: [endpoint]
-#     env_file: .env
-#     environment:
-#       CORS_ENABLED: "true"
-#       PUBLIC_URL: $CORS_ENDPOINT
-#       DB_CLIENT: "pg"
-#       DB_HOST: "database"
-#       DB_PORT: "5432"
-#       DB_DATABASE: "postgres"
-#       DB_USER: "postgres"
-#       DB_PASSWORD: $SECRET
-#     volumes:
-#       - ./data/uploads:/directus/uploads
-#       - ./source/extensions:/directus/extensions
-
-#   # v -- Postgres | Data storage as required by Directus.
-#   database:
-#     image: postgis/postgis:latest
-#     restart: unless-stopped
-#     depends_on: [endpoint]
-#     networks: [endpoint]
-#     env_file: .env
-#     environment:
-#       POSTGRES_PASSWORD: $SECRET
-#     volumes: [./data/database:/var/lib/postgresql/data]
-
-# networks:
-#   endpoint:
+  # ┏━ MySQL | An SQL based database.
+  database:
+    image: postgres:15
+    restart: unless-stopped
+    ports: [$DATABASE_PORT:5432]
+    volumes: [./data:/var/lib/postgresql/data]
+    environment:
+      POSTGRES_PASSWORD: $DATABASE_PASS
