--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -18,34 +15,18 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
+    "plugins": [{ "name": "next" }],
     "paths": {
-      "@/pages/*": [
-        "pages/*"
-      ],
-      "@/public/*": [
-        "public/*"
-      ],
-      "@/components/*": [
-        "source/components/*"
-      ],
-      "@/resources/*": [
-        "source/resources/*"
-      ],
-      "@/styles/*": [
-        "source/styles/*"
-      ],
-      "@/types/*": [
-        "source/types/*"
-      ]
+      "@/auth/*": ["app/api/auth/[...nextauth]/*"],
+      "@/assets/*": ["src/assets/*"],
+      "@/components/*": ["src/components/*"],
+      "@/emails/*": ["src/emails/*"],
+      "@/helpers/*": ["src/helpers/*"],
+      "@/locales/*": ["src/assets/*"],
+      "@/prisma/*": ["src/prisma/*"],
+      "@/styles/*": ["src/styles/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
